-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.0-beta1
-
None
do some getter/setter quickfixes and look in the cpp file.
QString CodeCompletion::hint() const { return hint_; } void CodeCompletion::setHint(const QString &hint) { hint_ = hint; } QString CodeCompletion::snippet() const { return snippet_; } void CodeCompletion::setSnippet(const QString &snippet) { snippet_ = snippet; } unsigned CodeCompletion::priority() const { return priority_; } void CodeCompletion::setPriority(const unsigned &priority) { priority_ = priority; } Kind CodeCompletion::completionKind() const { return completionKind_; } void CodeCompletion::setCompletionKind(const Kind &completionKind) { completionKind_ = completionKind; } Availability CodeCompletion::availability() const { return availability_; } void CodeCompletion::setAvailability(const Availability &availability) { availability_ = availability; } bool CodeCompletion::hasParameters() const { return hasParameters_; } void CodeCompletion::setHasParameters(bool hasParameters) { hasParameters_ = hasParameters; }
For Gerrit Dashboard: QTCREATORBUG-13872 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
105063,4 | CppEditor: Fix added newlines for GenerateGetterSetter quick fix | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |